--- a/src/Routine/Service/TestApp/vue/index.html
+++ b/src/Routine/Service/TestApp/vue/index.html
@@ -85,7 +85,7 @@
 											<div class="panel-heading panel-heading-btn">
 												Target
 												<button type="submit"
-												        class="btn btn-primary btn-xs pull-right">
+														class="btn btn-primary btn-xs pull-right">
 													Call <i class="glyphicon glyphicon-play"></i>
 												</button>
 											</div>
@@ -94,9 +94,9 @@
 													<div class="col-xs-12" v-if="modelOf(request.operation) && modelOf(request.operation).IsViewModel">
 														<div class="form-group">
 															<select class="form-control"
-															        v-if="modelOf(request.operation) && modelOf(request.operation).ActualModelIds.length > 1"
-															        v-model="request.target.ModelId"
-															        @change="request.invalidateTargetId">
+																	v-if="modelOf(request.operation) && modelOf(request.operation).ActualModelIds.length > 1"
+																	v-model="request.target.ModelId"
+																	@change="request.invalidateTargetId">
 																<option v-bind:value="modelId" v-for="modelId in modelOf(request.operation).ActualModelIds">
 																	{{modelOf(modelId).Name | splitCamelCase}}
 																</option>
@@ -109,9 +109,9 @@
 													<div class="col-xs-12">
 														<div class="form-group nopad-b">
 															<input type="text" class="form-control"
-															       v-model="request.target.Id"
-															       v-bind:placeholder="(modelOf(request.operation) && modelOf(request.operation).IsValueModel) ? 'Value':'Id'"
-															       v-if="modelOf(request.target.ModelId) && modelOf(request.target.ModelId).StaticInstances.length <= 0" />
+																   v-model="request.target.Id"
+																   v-bind:placeholder="(modelOf(request.operation) && modelOf(request.operation).IsValueModel) ? 'Value':'Id'"
+																   v-if="modelOf(request.target.ModelId) && modelOf(request.target.ModelId).StaticInstances.length <= 0" />
 															<p class="form-control" v-if="modelOf(request.target.ModelId) && modelOf(request.target.ModelId).StaticInstances.length === 1">
 																<span>{{modelOf(request.target.ModelId).StaticInstances[0].Display}}</span>
 															</p>
@@ -131,7 +131,7 @@
 												   :viewmodel="modelOf(parameter.ViewModelId)"
 												   :data="request.data"
 												   :marks="getRealMarks(parameter.Marks)"
-												   @modelOf="modelOf">
+												   @model-of="modelOf">
 										</parameter>
 									</form>
 								</div>
@@ -142,9 +142,8 @@
 			</div>
 		</div>
 	</div>
-	<script>
-	</script>
 	<script src="$urlbase$/File?path=vue/src/index.js"></script>
 	<script src="$urlbase$/File?path=vue/src/filters/string-filter.js"></script>
+	<script src="$urlbase$/File?path=vue/src/bus/event-bus.js"></script>
 </body>
 </html>
