--- a/src/Routine/Service/TestApp/vue/index.html
+++ b/src/Routine/Service/TestApp/vue/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <title>Service Test UI</title>
-    <link rel="stylesheet" type="text/css" href="$urlbase$/TestApp/File?path=assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="$urlbase$/TestApp/File?path=assets/css/master.css" />
+    <link rel="stylesheet" type="text/css" href="$urlbase$/$testapp$/File?path=assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="$urlbase$/$testapp$/File?path=assets/css/master.css" />
 
-    <script src="$urlbase$/TestApp/File?path=assets/js/vue.min.js"></script>
-    <script src="$urlbase$/TestApp/File?path=assets/js/vuex.min.js"></script>
-    <script src="$urlbase$/TestApp/File?path=assets/js/es6-promise.auto.js"></script>
-    <script src="$urlbase$/TestApp/File?path=assets/js/httpVueLoader.js"></script>
-    <script src="$urlbase$/TestApp/File?path=assets/js/axios.min.js"></script>
-    <script src="$urlbase$/TestApp/File?path=assets/js/lodash.min.js"></script>
+    <script src="$urlbase$/$testapp$/File?path=assets/js/vue.min.js"></script>
+    <script src="$urlbase$/$testapp$/File?path=assets/js/vuex.min.js"></script>
+    <script src="$urlbase$/$testapp$/File?path=assets/js/es6-promise.auto.js"></script>
+    <script src="$urlbase$/$testapp$/File?path=assets/js/httpVueLoader.js"></script>
+    <script src="$urlbase$/$testapp$/File?path=assets/js/axios.min.js"></script>
+    <script src="$urlbase$/$testapp$/File?path=assets/js/lodash.min.js"></script>
 </head>
 <body>
     <div id="app">
@@ -167,10 +167,10 @@
             </div>
         </div>
     </div>
-    <script src="$urlbase$/TestApp/File?path=vue/src/config.js"></script>
-    <script src="$urlbase$/TestApp/File?path=vue/src/mixins/routine-mixin.js"></script>
-    <script src="$urlbase$/TestApp/File?path=vue/src/store/index.store.js"></script>
-    <script src="$urlbase$/TestApp/File?path=vue/src/index.js"></script>
-    <script src="$urlbase$/TestApp/File?path=vue/src/filters/string-filter.js"></script>
+    <script src="$urlbase$/$testapp$/File?path=vue/src/config.js"></script>
+    <script src="$urlbase$/$testapp$/File?path=vue/src/mixins/routine-mixin.js"></script>
+    <script src="$urlbase$/$testapp$/File?path=vue/src/store/index.store.js"></script>
+    <script src="$urlbase$/$testapp$/File?path=vue/src/index.js"></script>
+    <script src="$urlbase$/$testapp$/File?path=vue/src/filters/string-filter.js"></script>
 </body>
 </html>
